# Eightrefl

./: CMakeLists.txt  README.md  Rew.hpp  main.cpp
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
cmake/: RewConfig.cmake
include/Eightrefl/: Attribute.hpp  Common.hpp  Core.hpp  Deleter.hpp  Dev.hpp  Factory.hpp  Function.hpp  Injection.hpp  Meta.hpp  Parent.hpp  Property.hpp  Reflectable.hpp  Reflection.hpp  Registry.hpp  Type.hpp  Utility.hpp
include/Eightrefl/BuiltIn/: Aliasing.hpp  Bool.hpp  BuiltIn.hpp  Char.hpp  Core.hpp  Floating.hpp  Function.hpp  Incomplete.hpp  Integral.hpp  Nullptr.hpp  Pointer.hpp  Qualifier.hpp  StaticArray.hpp  allocator.hpp  any.hpp  array.hpp  bitset.hpp  char_traits.hpp  compare.hpp  complex.hpp  deque.hpp  forward_list.hpp  function.hpp  functional.hpp  initializer_list.hpp  iterator.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  reference_wrapper.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  typeindex.hpp  typeinfo.hpp  (+6 more)
include/Eightrefl/Detail/: Macro.hpp  Meta.hpp
include/Eightrefl/Dev/: Attribute.hpp  Deleter.hpp  Dev.hpp  Factory.hpp  Function.hpp  Injectable.hpp  Injection.hpp  Meta.hpp  Parent.hpp  Property.hpp  Reflection.hpp  Registry.hpp  Type.hpp
include/Eightrefl/Standard/: Standard.hpp  allocator.hpp  any.hpp  array.hpp  bitset.hpp  char_traits.hpp  compare.hpp  complex.hpp  deque.hpp  forward_list.hpp  function.hpp  functional.hpp  initializer_list.hpp  iterator.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  reference_wrapper.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  typeindex.hpp  typeinfo.hpp  unique_ptr.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/Rew/: Attribute.hpp  BuiltIn.hpp  Cast.hpp  Common.hpp  Context.hpp  Core.hpp  Deleter.hpp  Dev.hpp  Evaluate.hpp  Factory.hpp  Function.hpp  Injection.hpp  Meta.hpp  Parent.hpp  Property.hpp  Reflectable.hpp  Reflection.hpp  Registry.hpp  Rew.hpp  Type.hpp  Utility.hpp  Visitor.hpp
include/Rew/BuiltIn/: Core.hpp  allocator.hpp  any.cpp  any.hpp  array.hpp  bitset.hpp  char_traits.hpp  compare.hpp  complex.hpp  deque.hpp  forward_list.hpp  function.hpp  functional.hpp  hash.hpp  initializer_list.hpp  iostream.hpp  iterator.hpp  list.hpp  locale.hpp  map.hpp  nullptr_t.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  reference_wrapper.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  typeindex.hpp  typeinfo.hpp  unique_ptr.hpp  unordered_map.hpp  unordered_set.hpp  valarray.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/Rew/Detail/: Macro.hpp  Meta.hpp
package/: Rew.hpp
src/Automation/: Core.cpp
src/Eightrefl/: Common.cpp  Dev.cpp  Registry.cpp
src/Eightrefl/BuiltIn/: Aliasing.cpp  Bool.cpp  BuilitIn.cpp  Char.cpp  Floating.cpp  Incomplete.cpp  Integral.cpp  Nullptr.cpp  any.cpp  char_traits.cpp  compare.cpp  complex.cpp  function.cpp  optional.cpp  shared_ptr.cpp  string.cpp  typeindex.cpp  typeinfo.cpp  variant.cpp
src/Eightrefl/Dev/: Attribute.cpp  Deleter.cpp  Dev.cpp  Factory.cpp  Function.cpp  Injection.cpp  Meta.cpp  Parent.cpp  Property.cpp  Reflection.cpp  Registry.cpp
src/Eightrefl/Standard/: Standard.cpp  any.cpp  char_traits.cpp  compare.cpp  complex.cpp  function.cpp  optional.cpp  shared_ptr.cpp  string.cpp  typeindex.cpp  typeinfo.cpp  variant.cpp
src/Rew/: Common.cpp  Dev.cpp  Registry.cpp
src/Rew/BuiltIn/: any.cpp  char_traits.cpp  compare.cpp  complex.cpp  function.cpp  optional.cpp  shared_ptr.cpp  string.cpp  typeindex.cpp  typeinfo.cpp  variant.cpp
test/: CMakeLists.txt  EightreflTestingBase.hpp  RewTestingBase.cpp  RewTestingBase.hpp  SerializableVisitor.cpp  SerializableVisitor.hpp  TestAllocator.cpp  TestAny.cpp  TestArray.cpp  TestBitset.cpp  TestBuiltIn.cpp  TestBuiltin.cpp  TestCommon.cpp  TestCommonBoolean.cpp  TestCommonChar.cpp  TestCommonFloatingPoint.cpp  TestCommonIncomplete.cpp  TestCommonIntegral.cpp  TestComplex.cpp  TestDeleter.cpp  TestDeque.cpp  TestDev.cpp  TestEnum.cpp  TestExample.cpp  TestFactory.cpp  TestForwardList.cpp  TestFunction.cpp  TestFunctional.cpp  TestInitializerList.cpp  TestInjection.cpp  TestLibrary.cpp  TestList.cpp  TestMap.cpp  TestMeta.cpp  TestNameOf.cpp  TestOptional.cpp  TestPair.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestReferenceWrapper.cpp  (+24 more)
test/TestReflectionSelf/: TestAttribute.hpp  TestFactory.cpp  TestFactory.hpp  TestFunction.cpp  TestFunction.hpp  TestInjection.cpp  TestInjection.hpp  TestMeta.cpp  TestMeta.hpp  TestParent.cpp  TestParent.hpp  TestProperty.cpp  TestProperty.hpp  TestReflection.cpp  TestReflection.hpp  TestRegistry.cpp  TestRegistry.hpp  TestType.cpp  TestType.hpp
test/examples/serialization/: SerializableVisitor.cpp  SerializableVisitor.hpp  SerializationFixture.hpp  TestSerialization.cpp
test/src/: TestCommon.cpp  TestDeque.cpp  TestEnum.cpp  TestFactory.cpp  TestForwardList.cpp  TestFunction.cpp  TestFunctional.cpp  TestInitializerList.cpp  TestInjection.cpp  TestMap.cpp  TestNameOf.cpp  TestOptional.cpp  TestPair.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestSet.cpp  TestString.cpp  TestTypeIndex.cpp  TestUniquePtr.cpp  TestUsing.cpp  TestVector.cpp  TestWeakPtr.cpp
